--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,10 @@
-.git*
-docs/
-examples/
-support/
-test/
-testing.js
+.editorconfig
+.gitattributes
+.git
 .DS_Store
-coverage.html
-lib-cov
+.gitignore
+.nyc_output
 .idea/
+coverage/
+test/
+package-lock.json
