ci: explicitly publish a public package

--- a/.github/workflows/ci-npm-publish.yml
+++ b/.github/workflows/ci-npm-publish.yml
@@ -43,6 +43,6 @@ jobs:
         run: npm install --ignore-scripts --production
 
       - name: Run NPM publish
-        run: npm publish
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_SYNATIC}}
