--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "node": ">=12"
   },
   "dependencies": {
-    "check-types": "11.2.2"
+    "check-types": "11.2.2",
+    "serialize-error": "8.1.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
