--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   },
   "extends": ["eslint:recommended", "google", "prettier"],
   "globals": {},
-  "parserOptions": {},
+  "parserOptions": {
+    "ecmaVersion": 2022
+  },
   "rules": {
     "indent": ["error", 4, {"SwitchCase": 1}],
     "max-len": ["off"],
