--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "scripts": {
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "lint-errors": "eslint . --quiet",
     "prettier": "prettier . --write",
     "test": "mocha --reporter spec --bail --check-leaks test/",
     "test-ci": "nyc --reporter text-summary mocha -- --reporter spec --check-leaks test/",
@@ -47,10 +49,11 @@
     "serialize-error": "8.1.0"
   },
   "devDependencies": {
+    "@synatic/eslint-config-synatic-node": "^2.0.0",
     "bson": "^6.8.0",
     "eslint": "^8.16.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "mocha": "^10.0.0",
     "nyc": "^17.0.0",
     "prettier": "^3.3.3"
